@@ -3,8 +3,10 @@ package de.hdm_stuttgart.mi.dad;
 import de.hdm_stuttgart.mi.dad.core.entity.ColumnValue;
 import de.hdm_stuttgart.mi.dad.core.entity.Row;
 import de.hdm_stuttgart.mi.dad.core.entity.Table;
+import de.hdm_stuttgart.mi.dad.core.ports.RepositoryPort;
+import de.hdm_stuttgart.mi.dad.core.property.Property;
+import de.hdm_stuttgart.mi.dad.core.property.PropertyFactory;
 import de.hdm_stuttgart.mi.dad.outgoing.RepositoryFactory;
-import de.hdm_stuttgart.mi.dad.ports.RepositoryPort;
 import org.apache.ibatis.jdbc.ScriptRunner;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
@@ -13,13 +15,16 @@ import org.junit.jupiter.api.Test;
 
 import java.io.FileNotFoundException;
 import java.io.FileReader;
+import java.math.BigDecimal;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Pattern;
 
+import static de.hdm_stuttgart.mi.dad.core.property.PropertyType.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -50,31 +55,31 @@ class TestMySQLRepository {
     }
 
     @Test
-    void test_findTableColumnNames() throws SQLException, FileNotFoundException {
-        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNames_testdata.sql"));
+    void test_Regex_no_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
 
-        final List<String> expected = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
-        final List<String> actual = repository.findTableColumnNames("account");
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
 
-        System.out.println(actual);
-        assertEquals(expected.size(), actual.size(), "Wrong number of columns");
-        assertTrue(expected.containsAll(actual));
-        assertTrue(actual.containsAll(expected));
-
-        assertTrue(repository.findTableColumnNames("test").isEmpty(), "should be empty");
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("test");
+        final Property property = PropertyFactory.getProperty(REGEX, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
     }
 
     @Test
-    void test_findInTable() throws SQLException, FileNotFoundException {
-        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_testdata.sql"));
+    void test_Regex_one_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
 
         final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
 
 
-        final String tableName1 = "account";
-        final Pattern pattern1 = Pattern.compile("Dorian");
-        final Table actual1 = repository.findPattern(tableName1, columns, pattern1);
-        final Table expected1 = new Table(tableName1, List.of(
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("Dorian");
+        final Property property = PropertyFactory.getProperty(REGEX, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        System.out.println(actual.rows());
+        final Table expected = new Table(tableName, List.of(
                 new Row(Arrays.asList(
                         new ColumnValue("id", "1"),
                         new ColumnValue("first_name", "Dorian"),
@@ -85,14 +90,21 @@ class TestMySQLRepository {
                         new ColumnValue("password", "jY0\\EZ&/9<X0.t")
                 ))
         ));
-        assertEquals(expected1.rows().size(), actual1.rows().size(), "Wrong number of rows");
-        assertEquals(expected1.rows().getFirst(), actual1.rows().getFirst(), "Maps should match");
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+    }
 
+    @Test
+    void test_Regex_multiple_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
 
-        final String tableName2 = "account";
-        final Pattern pattern2 = Pattern.compile("^c");
-        final Table actual2 = repository.findPattern(tableName2, columns, pattern2);
-        final Table expected2 = new Table(tableName2, Arrays.asList(
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("^c");
+        final Property property = PropertyFactory.getProperty(REGEX, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, Arrays.asList(
                 new Row(Arrays.asList(
                         new ColumnValue("id", "4"),
                         new ColumnValue("first_name", "Caroline"),
@@ -112,15 +124,130 @@ class TestMySQLRepository {
                         new ColumnValue("password", "tQ8/vr&.")
                 ))
         ));
-        assertEquals(expected2.rows().size(), actual2.rows().size(), "Wrong number of rows");
-        assertEquals(expected2.rows().getFirst(), actual2.rows().getFirst(), "Maps should match");
-        assertEquals(expected2.rows().get(1), actual2.rows().get(1), "Maps should match");
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
 
+    @Test
+    void test_Regex_number_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
 
-        final String tableName3 = "account";
-        final Pattern pattern3 = Pattern.compile("[0-9]+");
-        final Table actual3 = repository.findPattern(tableName3, columns, pattern3);
-        final Table expected3 = new Table(tableName3, Arrays.asList(
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("10");
+        final Property property = PropertyFactory.getProperty(REGEX, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, Arrays.asList(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "5"),
+                        new ColumnValue("first_name", "Andrea"),
+                        new ColumnValue("last_name", "Rummings"),
+                        new ColumnValue("account_created", "2020-03-29 01:43:10"),
+                        new ColumnValue("username", "arummings4"),
+                        new ColumnValue("email", "arummings4@cnbc.com"),
+                        new ColumnValue("password", "iL7_~0m#~\\*")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "10"),
+                        new ColumnValue("first_name", "Vernen"),
+                        new ColumnValue("last_name", "Pordal"),
+                        new ColumnValue("account_created", "2020-07-20 01:21:51"),
+                        new ColumnValue("username", "vpordal9"),
+                        new ColumnValue("email", "vpordal9@paginegialle.it"),
+                        new ColumnValue("password", "nZ4_k\\+!N*xhT")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
+
+    @Test
+    void test_Like_no_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("test");
+        final Property property = PropertyFactory.getProperty(LIKE, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_Like_one_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("Dorian");
+        final Property property = PropertyFactory.getProperty(LIKE, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "1"),
+                        new ColumnValue("first_name", "Dorian"),
+                        new ColumnValue("last_name", "Sporner"),
+                        new ColumnValue("account_created", "2018-03-30 00:59:12"),
+                        new ColumnValue("username", "dsporner0"),
+                        new ColumnValue("email", "dsporner0@51.la"),
+                        new ColumnValue("password", "jY0\\EZ&/9<X0.t")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+    }
+
+    @Test
+    void test_Like_multiple_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("c%");
+        final Property property = PropertyFactory.getProperty(LIKE, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, Arrays.asList(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "4"),
+                        new ColumnValue("first_name", "Caroline"),
+                        new ColumnValue("last_name", "Aubri"),
+                        new ColumnValue("account_created", "2020-04-09 09:47:58"),
+                        new ColumnValue("username", "caubri3"),
+                        new ColumnValue("email", "caubri3@auda.org.au"),
+                        new ColumnValue("password", "gK7*2Eit")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "7"),
+                        new ColumnValue("first_name", "Candace"),
+                        new ColumnValue("last_name", "Breslauer"),
+                        new ColumnValue("account_created", "2019-02-05 15:18:33"),
+                        new ColumnValue("username", "cbreslauer6"),
+                        new ColumnValue("email", "cbreslauer6@hao123.com"),
+                        new ColumnValue("password", "tQ8/vr&.")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
+
+    @Test
+    void test_Like_date_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findPattern_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+
+        final String tableName = "account";
+        final Pattern pattern = Pattern.compile("2018-__-__ __:__:__");
+        final Property property = PropertyFactory.getProperty(LIKE, pattern);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, Arrays.asList(
                 new Row(Arrays.asList(
                         new ColumnValue("id", "1"),
                         new ColumnValue("first_name", "Dorian"),
@@ -140,51 +267,6 @@ class TestMySQLRepository {
                         new ColumnValue("password", "iO9\"J?s==0b6cP}9")
                 )),
                 new Row(Arrays.asList(
-                        new ColumnValue("id", "3"),
-                        new ColumnValue("first_name", "Burke"),
-                        new ColumnValue("last_name", "Klaves"),
-                        new ColumnValue("account_created", "2022-12-31 14:43:42"),
-                        new ColumnValue("username", "bklaves2"),
-                        new ColumnValue("email", "bklaves2@opera.com"),
-                        new ColumnValue("password", "eA3\\i$tyTe*M(/z")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "4"),
-                        new ColumnValue("first_name", "Caroline"),
-                        new ColumnValue("last_name", "Aubri"),
-                        new ColumnValue("account_created", "2020-04-09 09:47:58"),
-                        new ColumnValue("username", "caubri3"),
-                        new ColumnValue("email", "caubri3@auda.org.au"),
-                        new ColumnValue("password", "gK7*2Eit")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "5"),
-                        new ColumnValue("first_name", "Andrea"),
-                        new ColumnValue("last_name", "Rummings"),
-                        new ColumnValue("account_created", "2020-03-29 01:43:10"),
-                        new ColumnValue("username", "arummings4"),
-                        new ColumnValue("email", "arummings4@cnbc.com"),
-                        new ColumnValue("password", "iL7_~0m#~\\*")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "6"),
-                        new ColumnValue("first_name", "Keenan"),
-                        new ColumnValue("last_name", "Ramme"),
-                        new ColumnValue("account_created", "2019-01-07 09:11:25"),
-                        new ColumnValue("username", "kramme5"),
-                        new ColumnValue("email", "kramme5@vistaprint.com"),
-                        new ColumnValue("password", "aE9)*,3ye1?)Snh")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "7"),
-                        new ColumnValue("first_name", "Candace"),
-                        new ColumnValue("last_name", "Breslauer"),
-                        new ColumnValue("account_created", "2019-02-05 15:18:33"),
-                        new ColumnValue("username", "cbreslauer6"),
-                        new ColumnValue("email", "cbreslauer6@hao123.com"),
-                        new ColumnValue("password", "tQ8/vr&.")
-                )),
-                new Row(Arrays.asList(
                         new ColumnValue("id", "8"),
                         new ColumnValue("first_name", "Nelson"),
                         new ColumnValue("last_name", "Santacrole"),
@@ -192,237 +274,38 @@ class TestMySQLRepository {
                         new ColumnValue("username", "nsantacrole7"),
                         new ColumnValue("email", "nsantacrole7@usatoday.com"),
                         new ColumnValue("password", "qP2#Z0.I1C@2kV")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "9"),
-                        new ColumnValue("first_name", "Laurel"),
-                        new ColumnValue("last_name", "Norrie"),
-                        new ColumnValue("account_created", "2020-11-15 17:37:15"),
-                        new ColumnValue("username", "lnorrie8"),
-                        new ColumnValue("email", "lnorrie8@google.ru"),
-                        new ColumnValue("password", "mQ6}y=B8+eK")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "10"),
-                        new ColumnValue("first_name", "Vernen"),
-                        new ColumnValue("last_name", "Pordal"),
-                        new ColumnValue("account_created", "2020-07-20 01:21:51"),
-                        new ColumnValue("username", "vpordal9"),
-                        new ColumnValue("email", "vpordal9@paginegialle.it"),
-                        new ColumnValue("password", "nZ4_k\\+!N*xhT")
                 ))
         ));
-        assertEquals(expected3.rows().size(), actual3.rows().size(), "Wrong number of rows");
-        assertEquals(expected3.rows().getFirst(), actual3.rows().getFirst(), "Maps should match");
-        assertEquals(expected3.rows().get(1), actual3.rows().get(1), "Maps should match");
-        assertEquals(expected3.rows().get(2), actual3.rows().get(2), "Maps should match");
-        assertEquals(expected3.rows().get(3), actual3.rows().get(3), "Maps should match");
-        assertEquals(expected3.rows().get(4), actual3.rows().get(4), "Maps should match");
-        assertEquals(expected3.rows().get(5), actual3.rows().get(5), "Maps should match");
-        assertEquals(expected3.rows().get(6), actual3.rows().get(6), "Maps should match");
-        assertEquals(expected3.rows().get(7), actual3.rows().get(7), "Maps should match");
-        assertEquals(expected3.rows().get(8), actual3.rows().get(8), "Maps should match");
-        assertEquals(expected3.rows().get(9), actual3.rows().get(9), "Maps should match");
-
-
-        final String tableName4 = "account";
-        final Pattern pattern4 = Pattern.compile("test");
-        final Table actual4 = repository.findPattern(tableName4, columns, pattern4);
-        assertTrue(actual4.rows().isEmpty(), "should be empty");
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().get(1), actual.rows().get(1), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
     }
 
     @Test
-    void test_findLikePattern() throws SQLException, FileNotFoundException {
-        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findLikePattern_testdata.sql"));
-
-        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
-
-
-        final String tableName1 = "account";
-        final Pattern pattern1 = Pattern.compile("Dorian");
-        final Table actual1 = repository.findLikePattern(tableName1, columns, pattern1);
-        final Table expected1 = new Table(tableName1, List.of(
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "1"),
-                        new ColumnValue("first_name", "Dorian"),
-                        new ColumnValue("last_name", "Sporner"),
-                        new ColumnValue("account_created", "2018-03-30 00:59:12"),
-                        new ColumnValue("username", "dsporner0"),
-                        new ColumnValue("email", "dsporner0@51.la"),
-                        new ColumnValue("password", "jY0\\EZ&/9<X0.t")
-                ))
-        ));
-        assertEquals(expected1.rows().size(), actual1.rows().size(), "Wrong number of rows");
-        assertEquals(expected1.rows().getFirst(), actual1.rows().getFirst(), "Maps should match");
-
-        final String tableName2 = "account";
-        final Pattern pattern2 = Pattern.compile("c%");
-        final Table actual2 = repository.findLikePattern(tableName2, columns, pattern2);
-        final Table expected2 = new Table(tableName2, Arrays.asList(
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "4"),
-                        new ColumnValue("first_name", "Caroline"),
-                        new ColumnValue("last_name", "Aubri"),
-                        new ColumnValue("account_created", "2020-04-09 09:47:58"),
-                        new ColumnValue("username", "caubri3"),
-                        new ColumnValue("email", "caubri3@auda.org.au"),
-                        new ColumnValue("password", "gK7*2Eit")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "7"),
-                        new ColumnValue("first_name", "Candace"),
-                        new ColumnValue("last_name", "Breslauer"),
-                        new ColumnValue("account_created", "2019-02-05 15:18:33"),
-                        new ColumnValue("username", "cbreslauer6"),
-                        new ColumnValue("email", "cbreslauer6@hao123.com"),
-                        new ColumnValue("password", "tQ8/vr&.")
-                ))
-        ));
-        assertEquals(expected2.rows().size(), actual2.rows().size(), "Wrong number of rows");
-        assertEquals(expected2.rows().getFirst(), actual2.rows().getFirst(), "Maps should match");
-        assertEquals(expected2.rows().get(1), actual2.rows().get(1), "Maps should match");
-
-
-        final String tableName3 = "account";
-        final Pattern pattern3 = Pattern.compile("20__-__-__ __:__:__");
-        final Table actual3 = repository.findLikePattern(tableName3, columns, pattern3);
-        final Table expected3 = new Table(tableName3, Arrays.asList(
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "1"),
-                        new ColumnValue("first_name", "Dorian"),
-                        new ColumnValue("last_name", "Sporner"),
-                        new ColumnValue("account_created", "2018-03-30 00:59:12"),
-                        new ColumnValue("username", "dsporner0"),
-                        new ColumnValue("email", "dsporner0@51.la"),
-                        new ColumnValue("password", "jY0\\EZ&/9<X0.t")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "2"),
-                        new ColumnValue("first_name", "Bale"),
-                        new ColumnValue("last_name", "Sandal"),
-                        new ColumnValue("account_created", "2018-06-14 01:06:41"),
-                        new ColumnValue("username", "bsandal1"),
-                        new ColumnValue("email", "bsandal1@virginia.edu"),
-                        new ColumnValue("password", "iO9\"J?s==0b6cP}9")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "3"),
-                        new ColumnValue("first_name", "Burke"),
-                        new ColumnValue("last_name", "Klaves"),
-                        new ColumnValue("account_created", "2022-12-31 14:43:42"),
-                        new ColumnValue("username", "bklaves2"),
-                        new ColumnValue("email", "bklaves2@opera.com"),
-                        new ColumnValue("password", "eA3\\i$tyTe*M(/z")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "4"),
-                        new ColumnValue("first_name", "Caroline"),
-                        new ColumnValue("last_name", "Aubri"),
-                        new ColumnValue("account_created", "2020-04-09 09:47:58"),
-                        new ColumnValue("username", "caubri3"),
-                        new ColumnValue("email", "caubri3@auda.org.au"),
-                        new ColumnValue("password", "gK7*2Eit")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "5"),
-                        new ColumnValue("first_name", "Andrea"),
-                        new ColumnValue("last_name", "Rummings"),
-                        new ColumnValue("account_created", "2020-03-29 01:43:10"),
-                        new ColumnValue("username", "arummings4"),
-                        new ColumnValue("email", "arummings4@cnbc.com"),
-                        new ColumnValue("password", "iL7_~0m#~\\*")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "6"),
-                        new ColumnValue("first_name", "Keenan"),
-                        new ColumnValue("last_name", "Ramme"),
-                        new ColumnValue("account_created", "2019-01-07 09:11:25"),
-                        new ColumnValue("username", "kramme5"),
-                        new ColumnValue("email", "kramme5@vistaprint.com"),
-                        new ColumnValue("password", "aE9)*,3ye1?)Snh")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "7"),
-                        new ColumnValue("first_name", "Candace"),
-                        new ColumnValue("last_name", "Breslauer"),
-                        new ColumnValue("account_created", "2019-02-05 15:18:33"),
-                        new ColumnValue("username", "cbreslauer6"),
-                        new ColumnValue("email", "cbreslauer6@hao123.com"),
-                        new ColumnValue("password", "tQ8/vr&.")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "8"),
-                        new ColumnValue("first_name", "Nelson"),
-                        new ColumnValue("last_name", "Santacrole"),
-                        new ColumnValue("account_created", "2018-09-01 19:57:19"),
-                        new ColumnValue("username", "nsantacrole7"),
-                        new ColumnValue("email", "nsantacrole7@usatoday.com"),
-                        new ColumnValue("password", "qP2#Z0.I1C@2kV")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "9"),
-                        new ColumnValue("first_name", "Laurel"),
-                        new ColumnValue("last_name", "Norrie"),
-                        new ColumnValue("account_created", "2020-11-15 17:37:15"),
-                        new ColumnValue("username", "lnorrie8"),
-                        new ColumnValue("email", "lnorrie8@google.ru"),
-                        new ColumnValue("password", "mQ6}y=B8+eK")
-                )),
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "10"),
-                        new ColumnValue("first_name", "Vernen"),
-                        new ColumnValue("last_name", "Pordal"),
-                        new ColumnValue("account_created", "2020-07-20 01:21:51"),
-                        new ColumnValue("username", "vpordal9"),
-                        new ColumnValue("email", "vpordal9@paginegialle.it"),
-                        new ColumnValue("password", "nZ4_k\\+!N*xhT")
-                ))
-        ));
-        assertEquals(expected3.rows().size(), actual3.rows().size(), "Wrong number of rows");
-        assertEquals(expected3.rows().getFirst(), actual3.rows().getFirst(), "Maps should match");
-        assertEquals(expected3.rows().get(1), actual3.rows().get(1), "Maps should match");
-        assertEquals(expected3.rows().get(2), actual3.rows().get(2), "Maps should match");
-        assertEquals(expected3.rows().get(3), actual3.rows().get(3), "Maps should match");
-        assertEquals(expected3.rows().get(4), actual3.rows().get(4), "Maps should match");
-        assertEquals(expected3.rows().get(5), actual3.rows().get(5), "Maps should match");
-        assertEquals(expected3.rows().get(6), actual3.rows().get(6), "Maps should match");
-        assertEquals(expected3.rows().get(7), actual3.rows().get(7), "Maps should match");
-        assertEquals(expected3.rows().get(8), actual3.rows().get(8), "Maps should match");
-        assertEquals(expected3.rows().get(9), actual3.rows().get(9), "Maps should match");
-
-
-        final String tableName4 = "account";
-        final Pattern pattern4 = Pattern.compile("test");
-        final Table actual4 = repository.findLikePattern(tableName4, columns, pattern4);
-        assertTrue(actual4.rows().isEmpty(), "should be empty");
-    }
-
-    @Test
-    void test_findEqual() throws SQLException, FileNotFoundException {
+    void test_Equal_no_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
         scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findEqual_testdata.sql"));
 
         final List<String> columns = Arrays.asList("id", "first_name", "last_name", "age", "money");
 
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(11);
+        final Property property = PropertyFactory.getProperty(EQUAL, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
+    }
 
-        final String tableName1 = "account";
-        final double number1 = 74;
-        final Table actual1 = repository.findEqual(tableName1, columns, number1);
-        final Table expected1 = new Table(tableName1, List.of(
-                new Row(Arrays.asList(
-                        new ColumnValue("id", "1"),
-                        new ColumnValue("first_name", "Tucker"),
-                        new ColumnValue("last_name", "Blumire"),
-                        new ColumnValue("age", "74"),
-                        new ColumnValue("money", "9432.00")
-                ))
-        ));
-        assertEquals(expected1.rows().size(), actual1.rows().size(), "Wrong number of rows");
-        assertEquals(expected1.rows().getFirst(), actual1.rows().getFirst(), "Maps should match");
+    @Test
+    void test_Equal_integer_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findEqual_testdata.sql"));
 
-        final String tableName2 = "account";
-        final double number2 = 34;
-        final Table actual2 = repository.findEqual(tableName2, columns, number2);
-        final Table expected2 = new Table(tableName1, List.of(
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "age", "money");
+
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(34);
+        final Property property = PropertyFactory.getProperty(EQUAL, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
                 new Row(Arrays.asList(
                         new ColumnValue("id", "5"),
                         new ColumnValue("first_name", "Onfroi"),
@@ -438,14 +321,22 @@ class TestMySQLRepository {
                         new ColumnValue("money", "5306.60")
                 ))
         ));
-        assertEquals(expected2.rows().size(), actual2.rows().size(), "Wrong number of rows");
-        assertEquals(expected2.rows().getFirst(), actual2.rows().getFirst(), "Maps should match");
-        assertEquals(expected2.rows().getLast(), actual2.rows().getLast(), "Maps should match");
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
 
-        final String tableName3 = "account";
-        final double number3 = 0.50;
-        final Table actual3 = repository.findEqual(tableName2, columns, number3);
-        final Table expected3 = new Table(tableName1, List.of(
+    @Test
+    void test_Equal_decimal_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findEqual_testdata.sql"));
+
+        final List<String> columns = Arrays.asList("id", "first_name", "last_name", "age", "money");
+
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(0.50);
+        final Property property = PropertyFactory.getProperty(EQUAL, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
                 new Row(Arrays.asList(
                         new ColumnValue("id", "4"),
                         new ColumnValue("first_name", "Malinde"),
@@ -461,14 +352,354 @@ class TestMySQLRepository {
                         new ColumnValue("money", "0.50")
                 ))
         ));
-        assertEquals(expected3.rows().size(), actual3.rows().size(), "Wrong number of rows");
-        assertEquals(expected3.rows().getFirst(), actual3.rows().getFirst(), "Maps should match");
-        assertEquals(expected3.rows().getLast(), actual3.rows().getLast(), "Maps should match");
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
 
+    @Test
+    void test_Greater_Numeric_no_match_findTableRowsWithProperties() throws FileNotFoundException, SQLException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterNumeric_test_data.sql"));
 
-        final String tableName4 = "account";
-        final double number4 = 11;
-        final Table actual4 = repository.findEqual(tableName4, columns, number4);
-        assertTrue(actual4.rows().isEmpty(), "should be empty");
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(98278675);
+        final Property property = PropertyFactory.getProperty(GREATERNUMERIC, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_Greater_Numeric_one_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterNumeric_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(97278674);
+        final Property property = PropertyFactory.getProperty(GREATERNUMERIC, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "10"),
+                        new ColumnValue("first_name", "Claudianus"),
+                        new ColumnValue("last_name", "Hirsch"),
+                        new ColumnValue("account_created", "2023-10-22 13:53:38"),
+                        new ColumnValue("username", "chirsch9"),
+                        new ColumnValue("email", "chirsch9@fc2.com"),
+                        new ColumnValue("password", "fR1`C=>yQCP"),
+                        new ColumnValue("zipcode", "618"),
+                        new ColumnValue("balance", "97278675"),
+                        new ColumnValue("votes", "316616"),
+                        new ColumnValue("bought_books", "358568")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+    }
+
+    @Test
+    void test_Greater_Numeric_multiple_match_findTableRowsWithProperties() throws FileNotFoundException, SQLException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterNumeric_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal number = BigDecimal.valueOf(94935073);
+        final Property property = PropertyFactory.getProperty(GREATERNUMERIC, number);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "7"),
+                        new ColumnValue("first_name", "Yvonne"),
+                        new ColumnValue("last_name", "Biaggetti"),
+                        new ColumnValue("account_created", "2024-01-04 01:24:35"),
+                        new ColumnValue("username", "ybiaggetti6"),
+                        new ColumnValue("email", "ybiaggetti6@ning.com"),
+                        new ColumnValue("password", "bB5$4''AkxnC>uK("),
+                        new ColumnValue("zipcode", "11247"),
+                        new ColumnValue("balance", "94935074"),
+                        new ColumnValue("votes", "479981"),
+                        new ColumnValue("bought_books", "107847")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "9"),
+                        new ColumnValue("first_name", "Tye"),
+                        new ColumnValue("last_name", "Heintzsch"),
+                        new ColumnValue("account_created", "2024-03-01 18:11:51"),
+                        new ColumnValue("username", "theintzsch8"),
+                        new ColumnValue("email", "theintzsch8@newyorker.com"),
+                        new ColumnValue("password", "hE1#zsv=P0"),
+                        new ColumnValue("zipcode", "24442"),
+                        new ColumnValue("balance", "96443590"),
+                        new ColumnValue("votes", "827467"),
+                        new ColumnValue("bought_books", "928780")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "10"),
+                        new ColumnValue("first_name", "Claudianus"),
+                        new ColumnValue("last_name", "Hirsch"),
+                        new ColumnValue("account_created", "2023-10-22 13:53:38"),
+                        new ColumnValue("username", "chirsch9"),
+                        new ColumnValue("email", "chirsch9@fc2.com"),
+                        new ColumnValue("password", "fR1`C=>yQCP"),
+                        new ColumnValue("zipcode", "618"),
+                        new ColumnValue("balance", "97278675"),
+                        new ColumnValue("votes", "316616"),
+                        new ColumnValue("bought_books", "358568")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().get(1), actual.rows().get(1), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
+
+    @Test
+    void test_Greater_Date_no_match_findTableRowsWithProperties() throws FileNotFoundException, SQLException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterDate_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("account_created", "last_updated", "last_login");
+
+        final String tableName = "account";
+        final LocalDate date = LocalDate.parse("2024-12-12");
+        final Property property = PropertyFactory.getProperty(GREATERDATE, date);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_Greater_Date_one_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterDate_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("account_created", "last_updated", "last_login");
+
+        final String tableName = "account";
+        final LocalDate date = LocalDate.parse("2024-05-03");
+        final Property property = PropertyFactory.getProperty(GREATERDATE, date);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "4"),
+                        new ColumnValue("first_name", "Conni"),
+                        new ColumnValue("last_name", "Jennemann"),
+                        new ColumnValue("account_created", "2023-06-13"),
+                        new ColumnValue("last_updated", "2024-05-04 11:06:29"),
+                        new ColumnValue("last_login", "2023-06-13 03:20:04")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+    }
+
+    @Test
+    void test_Greater_Date_multiple_match_findTableRowsWithProperties() throws FileNotFoundException, SQLException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findGreaterDate_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("account_created", "last_updated", "last_login");
+
+        final String tableName = "account";
+        final LocalDate date = LocalDate.parse("2024-04-03");
+        final Property property = PropertyFactory.getProperty(GREATERDATE, date);
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "1"),
+                        new ColumnValue("first_name", "Patrica"),
+                        new ColumnValue("last_name", "Bront"),
+                        new ColumnValue("account_created", "2024-05-03"),
+                        new ColumnValue("last_updated", "2023-08-24 10:12:24"),
+                        new ColumnValue("last_login", "2023-06-13 03:20:04")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "4"),
+                        new ColumnValue("first_name", "Conni"),
+                        new ColumnValue("last_name", "Jennemann"),
+                        new ColumnValue("account_created", "2023-06-13"),
+                        new ColumnValue("last_updated", "2024-05-04 11:06:29"),
+                        new ColumnValue("last_login", "2023-06-13 03:20:04")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "5"),
+                        new ColumnValue("first_name", "Estella"),
+                        new ColumnValue("last_name", "Markie"),
+                        new ColumnValue("account_created", "2023-09-06"),
+                        new ColumnValue("last_updated", "2024-03-12 17:39:27"),
+                        new ColumnValue("last_login", "2024-04-12 17:39:27")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().get(1), actual.rows().get(1), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
+
+    @Test
+    void test_Range_Numeric_no_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findInRangeNumeric_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal from = BigDecimal.valueOf(98278675);
+        final BigDecimal to = BigDecimal.valueOf(100000000);
+        final Property property = PropertyFactory.getProperty(RANGENUMERIC, new BigDecimal[]{from, to});
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        assertTrue(actual.rows().isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_Range_Numeric_one_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findInRangeNumeric_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal from = BigDecimal.valueOf(80);
+        final BigDecimal to = BigDecimal.valueOf(100);
+        final Property property = PropertyFactory.getProperty(RANGENUMERIC, new BigDecimal[]{from, to});
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "4"),
+                        new ColumnValue("first_name", "Conni"),
+                        new ColumnValue("last_name", "Jennemann"),
+                        new ColumnValue("account_created", "2024-05-03 11:06:29"),
+                        new ColumnValue("username", "cjennemann3"),
+                        new ColumnValue("email", "cjennemann3@whitehouse.gov"),
+                        new ColumnValue("password", "sJ3@y)c|`w{ku"),
+                        new ColumnValue("zipcode", "88"),
+                        new ColumnValue("balance", "1958874"),
+                        new ColumnValue("votes", "474797"),
+                        new ColumnValue("bought_books", "546353")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+    }
+
+    @Test
+    void test_Range_Numeric_multiple_match_findTableRowsWithProperties() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findInRangeNumeric_test_data.sql"));
+
+        final List<String> columns = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+
+        final String tableName = "account";
+        final BigDecimal from = BigDecimal.valueOf(90000000);
+        final BigDecimal to = BigDecimal.valueOf(100000000);
+        final Property property = PropertyFactory.getProperty(RANGENUMERIC, new BigDecimal[]{from, to});
+        final Table actual = repository.findTableRowsWithProperties(tableName, columns, List.of(property));
+        final Table expected = new Table(tableName, List.of(
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "7"),
+                        new ColumnValue("first_name", "Yvonne"),
+                        new ColumnValue("last_name", "Biaggetti"),
+                        new ColumnValue("account_created", "2024-01-04 01:24:35"),
+                        new ColumnValue("username", "ybiaggetti6"),
+                        new ColumnValue("email", "ybiaggetti6@ning.com"),
+                        new ColumnValue("password", "bB5$4''AkxnC>uK("),
+                        new ColumnValue("zipcode", "11247"),
+                        new ColumnValue("balance", "94935074"),
+                        new ColumnValue("votes", "479981"),
+                        new ColumnValue("bought_books", "107847")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "9"),
+                        new ColumnValue("first_name", "Tye"),
+                        new ColumnValue("last_name", "Heintzsch"),
+                        new ColumnValue("account_created", "2024-03-01 18:11:51"),
+                        new ColumnValue("username", "theintzsch8"),
+                        new ColumnValue("email", "theintzsch8@newyorker.com"),
+                        new ColumnValue("password", "hE1#zsv=P0"),
+                        new ColumnValue("zipcode", "24442"),
+                        new ColumnValue("balance", "96443590"),
+                        new ColumnValue("votes", "827467"),
+                        new ColumnValue("bought_books", "928780")
+                )),
+                new Row(Arrays.asList(
+                        new ColumnValue("id", "10"),
+                        new ColumnValue("first_name", "Claudianus"),
+                        new ColumnValue("last_name", "Hirsch"),
+                        new ColumnValue("account_created", "2023-10-22 13:53:38"),
+                        new ColumnValue("username", "chirsch9"),
+                        new ColumnValue("email", "chirsch9@fc2.com"),
+                        new ColumnValue("password", "fR1`C=>yQCP"),
+                        new ColumnValue("zipcode", "618"),
+                        new ColumnValue("balance", "97278675"),
+                        new ColumnValue("votes", "316616"),
+                        new ColumnValue("bought_books", "358568")
+                ))
+        ));
+        assertEquals(expected.rows().size(), actual.rows().size(), "Wrong number of rows");
+        assertEquals(expected.rows().getFirst(), actual.rows().getFirst(), "Should match");
+        assertEquals(expected.rows().get(1), actual.rows().get(1), "Should match");
+        assertEquals(expected.rows().getLast(), actual.rows().getLast(), "Should match");
+    }
+
+    @Test
+    void test_findTableColumnNamesAll_no_match() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesAll_test_data.sql"));
+
+        final List<String> actual = repository.findTableColumnNamesAll("test");
+
+        assertTrue(actual.isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_findTableColumnNamesAll() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesAll_test_data.sql"));
+
+        final List<String> expected = Arrays.asList("id", "first_name", "last_name", "account_created", "username", "email", "password");
+        final List<String> actual = repository.findTableColumnNamesAll("account");
+
+        System.out.println(actual);
+        assertEquals(expected.size(), actual.size(), "Wrong number of columns");
+        assertTrue(expected.containsAll(actual));
+        assertTrue(actual.containsAll(expected));
+    }
+
+    @Test
+    void test_findTableColumnNamesNumeric_no_match() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesNumeric_test_data.sql"));
+
+        final List<String> actual = repository.findTableColumnNamesNumeric("test");
+
+        assertTrue(actual.isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_findTableColumnNamesNumeric() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesNumeric_test_data.sql"));
+
+        final List<String> expected = Arrays.asList("id", "zipcode", "balance", "votes", "bought_books");
+        final List<String> actual = repository.findTableColumnNamesNumeric("account");
+
+        System.out.println(actual);
+        assertEquals(expected.size(), actual.size(), "Wrong number of columns");
+        assertTrue(expected.containsAll(actual));
+        assertTrue(actual.containsAll(expected));
+    }
+
+    @Test
+    void test_findTableColumnNamesDate_no_match() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesDate_test_data.sql"));
+
+        final List<String> actual = repository.findTableColumnNamesDate("test");
+
+        assertTrue(actual.isEmpty(), "should be empty");
+    }
+
+    @Test
+    void test_findTableColumnNamesDate() throws SQLException, FileNotFoundException {
+        scriptRunner.runScript(new FileReader("src/test/resources/TestMySQLRepository/test_findTableColumnNamesDate_test_data.sql"));
+
+        final List<String> expected = Arrays.asList("account_created", "last_updated", "last_login");
+        final List<String> actual = repository.findTableColumnNamesDate("account");
+
+        System.out.println(actual);
+        assertEquals(expected.size(), actual.size(), "Wrong number of columns");
+        assertTrue(expected.containsAll(actual));
+        assertTrue(actual.containsAll(expected));
     }
 }
